# drt

./: .all-contributorsrc  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  FEATURE_DRY_RUN_ROW_COUNT.md  GOVERNANCE.ja.md  GOVERNANCE.md  Makefile  OPEN_CORE.md  README.ja.md  README.md  ROADMAP.md  SECURITY.md  VERSIONING.md  codecov.yml  coverage.xml  docker-compose.yml  main.txt  pr-body.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: dagster-drt-release-check.md  drt-changelog.md  drt-create-sync.md  drt-debug.md  drt-init.md  drt-migrate.md  drt-patch-release.md  drt-release-check.md  drt-review-pr.md  drt-triage-issues.md  drt-troubleshoot.md
.devcontainer/: devcontainer.json  setup.sh  welcome.sh
.github/: CODEOWNERS  FUNDING.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  codeql.yml  contributors-audit.yml  cost-digest.yml  drift-check.yml  dwh-smoke.yml  i18n-check.yml  notify-drt-web.yml  publish-dagster-drt.yml  publish-drt-core.yml  publish.yml  sync-labels.yml  telemetry-retention-cleanup.yml  vscode-schema-drift.yml
docs/: CONTRIBUTING.ja.md  telemetry.md
docs/adr/: 0001-drt-docs-manifest.md
docs/assets/: quickstart.tape
docs/connectors/: clickhouse.md  databricks.md  mysql.md  postgres.md  rest-api.md  snowflake.md
docs/design/: drt-docs-lineage-mock.html
docs/guides/: ci-cd-integration.md  comparison.md  dead-letter-queue.md  destination-lookup.md  retry.md  using-with-dbt.md
docs/ja/: configuration.md
docs/llm/: API_REFERENCE.md  CONTEXT.md
docs/migration/: v0.6-to-v0.7.md
docs/plans/: 2026-03-31-v0.4-implementation.md  2026-04-08-drt-test-command.md
drt/: _http_utils.py  deprecations.py  telemetry.py
drt/alerts/: __init__.py  conditions.py  dispatcher.py  slack.py  webhook.py
drt/cli/: _app.py  _connector_detail.py  _helpers.py  _init_templates.py  _logging.py  _selection.py  doctor.py  errors.py  init_wizard.py  main.py  output.py  server.py
drt/config/: base.py  connectors.py  credentials.py  destinations_saas.py  destinations_sql.py  destinations_storage.py  duration.py  models.py  parser.py  profiles.py  schema.py  secrets.py  sync_options.py  vars.py
drt/connectors/: __init__.py  registry.py
drt/destinations/: _blob_serializer.py  _mirror_state.py  _serializer.py  airtable.py  amplitude.py  auth.py  azure_blob.py  base.py  bigquery.py  clickhouse.py  databricks.py  discord.py  elasticsearch.py  email_smtp.py  file.py  gcs.py  github_actions.py  google_ads.py  google_sheets.py  hubspot.py  intercom.py  jira.py  klaviyo.py  line_notify.py  linear.py  lookup.py  mixpanel.py  mysql.py  notion.py  parquet.py  postgres.py  query.py  rate_limiter.py  rest_api.py  retry.py  row_errors.py  s3.py  salesforce.py  salesforce_bulk.py  schema.py  (+9 more)
drt/docs/: __init__.py  _html_assets.py  _svg.py  builder.py  dag.py  html.py  layout.py  manifest.py  mermaid.py
drt/engine/: diff.py  field_mappings.py  masking.py  observer.py  resolver.py  sync.py  test_runner.py
drt/integrations/: _runner.py  airflow.py  dbt.py  prefect.py
drt/mcp/: __init__.py  server.py
drt/observability/: __init__.py  otel.py
drt/sources/: base.py  bigquery.py  clickhouse.py  databricks.py  deltalake.py  duckdb.py  fake.py  iceberg.py  mysql.py  postgres.py  redshift.py  rest_api.py  snowflake.py  sqlite.py  sqlserver.py
drt/state/: dlq.py  history.py  manager.py  test_failures.py  watermark.py
drt/templates/: renderer.py
examples/: README.md
examples/bigquery_to_discord/: README.md  drt_project.yml
examples/docs-demo/: README.md  drt_project.yml
examples/duckdb_to_discord/: drt_project.yml  profiles.yml.example
examples/duckdb_to_file/: drt_project.yml  profiles.yml  setup.sh
examples/duckdb_to_google_sheets/: README.md  drt_project.yml
examples/duckdb_to_rest/: drt_project.yml  profiles.yml.example  setup.sh
examples/jira_test/: jira_test_sync.yml  test_data.py
examples/mysql_to_slack/: README.md  drt_project.yml
examples/postgres_to_postgres_mirror/: README.md  drt_project.yml  profiles.yml.example
examples/postgres_to_slack/: README.md  drt_project.yml
examples/quickstart/: README.md  drt_project.yml  seed.py  seed.sql
integrations/dagster-drt/: README.md  pyproject.toml
integrations/dagster-drt/dagster_drt/: __init__.py  assets.py  resource.py  specs.py  translator.py
integrations/dagster-drt/tests/: test_assets.py
notes/: contract-suite-parity-test.md
scripts/: check-i18n-sync.sh  check_changelog_monotonic.py  check_changelog_required.py  check_contributors.sh  check_drift.sh  cost_digest.py  drift_baseline.txt  posthog-retention-cleanup.py  release-check.sh  sync-version.py
signatures/: cla.json
test_project/: drt_project.yml
tests/: conftest.py
(+244 files in other folders)
