[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drt-core"
version = "0.7.10"
description = "Reverse ETL for the code-first data stack"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "drt-hub", email = "masukai9612kf@gmail.com" }]
keywords = [
    "reverse-etl",
    "data-engineering",
    "data-activation",
    "data-pipeline",
    "data-stack",
    "etl",
    "dbt",
    "bigquery",
    "cli",
    "automation",
    "data-warehouse",
    "sql",
    "python-cli",
    "open-source",
    "mcp",
    "llm-data",
    "data-sync",
    "yaml",
    "duckdb",
    "data-integration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
bigquery = ["google-cloud-bigquery>=3.0"]
duckdb = ["duckdb>=0.10"]
postgres = ["psycopg2-binary>=2.9"]
redshift = ["psycopg2-binary>=2.9"]  # Redshift uses PostgreSQL wire protocol
clickhouse = ["clickhouse-connect>=0.7.0"]
snowflake = ["snowflake-connector-python>=3.0"]
databricks = ["databricks-sql-connector>=3.0"]
deltalake = ["deltalake>=0.17"]
iceberg = ["pyiceberg>=0.7"]
sqlserver = ["pymssql>=2.3"]
gcs = ["google-cloud-storage>=2.0"]
azure = ["azure-storage-blob>=12.0", "azure-identity>=1.15"]
sheets = ["google-api-python-client>=2.0", "google-auth>=2.0"]
mysql = ["pymysql>=1.1"]
parquet = ["pandas>=2.0", "pyarrow>=12.0"]
s3 = ["boto3>=1.34"]
docs = ["pygments>=2.17"]  # build-time YAML highlighting for `drt docs generate --format html`
mcp = ["fastmcp>=2.0"]
otel = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]
dev = [
    "pygments>=2.17",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-httpserver>=1.0",
    "mypy>=1.10,<3",
    "ruff>=0.4,<1",
    "types-pyyaml",
    "types-PyMySQL",
]

[project.scripts]
drt = "drt.cli.main:app"

[project.urls]
Homepage = "https://github.com/drt-hub/drt"
Documentation = "https://github.com/drt-hub/drt#readme"
Repository = "https://github.com/drt-hub/drt"
Issues = "https://github.com/drt-hub/drt/issues"
Changelog = "https://github.com/drt-hub/drt/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["drt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Vendored HTML/CSS/JS template strings for the docs site (P3 of #499) carry
# long literal lines that don't benefit from wrapping.
"drt/docs/html.py" = ["E501"]
"drt/docs/_html_assets.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
# fastmcp decorators are untyped — skip strict checks for MCP server module
module = "drt.mcp.server"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "dwh_smoke: real cloud-warehouse smoke checks (Snowflake/Databricks/BigQuery); skip without DRT_SMOKE_* secrets (#674).",
]
asyncio_mode = "auto"
