[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dagster-drt"
version = "0.4.0"
description = "Dagster integration for drt (data reverse tool)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.6",
    "drt-core>=0.3",
]
